--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "lucide-react": "^0.544.0",
     "mysql2": "^3.15.1",
     "next": "^15.2.3",
+    "posthog-js": "^1.268.6",
+    "posthog-node": "^5.9.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.3.1",
