--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,5 @@ SINGLESTORE_PASS="notapassword"
 SINGLESTORE_HOST="something.svc.singlestore.com"
 SINGLESTORE_PORT=3333
 SINGLESTORE_DB_NAME="DRIVE_TUTORIAL_CLONE_DB"
+
+NEXT_PUBLIC_POSTHOG_KEY=adasdqkejqneijqnoqienqini
